Closed Bug 1661388 Opened 5 years ago Closed 5 years ago

Print preview progress dialog appears when window.print is called if print.show_print_progress is true.

Categories

(Core :: Printing: Setup, defect, P1)

defect

Tracking

()

VERIFIED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox80 --- unaffected
firefox81 --- verified
firefox82 --- verified

People

(Reporter: hiro, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [print2020_v81] [old-ui-] )

Attachments

(2 files)

STR;

1 Open https://www.irs.gov/pub/irs-pdf/f1040.pdf
2 Click the print icon button in the pdf viewer

Keywords: regression
Whiteboard: [print2020_v81] [old-ui-]

Odd.

Assignee: nobody → emilio
Priority: -- → P1
Summary: Print preview progress dialog appears when "print" icon is pressed in the pdf viewer → Print preview progress dialog appears when window.print is called if print.show_print_progress is true.
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8fc46abf5b83 Factor out the default print settings code. r=jwatt https://hg.mozilla.org/integration/autoland/rev/046111d1aa43 Never show the print progress dialog if we're calling window.print() with the new UI. r=jwatt
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch

Reminder to request Beta uplift.

Flags: needinfo?(emilio)

This one we need to uplift along with bug 1636728.

Flags: needinfo?(emilio)

Set release status flags based on info from the regressing bug 1636728

Regressions: 1661838

Comment on attachment 9172355 [details]
Bug 1661388 - Never show the print progress dialog if we're calling window.print() with the new UI. r=jwatt

Beta/Release Uplift Approval Request

  • User impact if declined: Poor UX as dialog opens when it shouldn't
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Medium
  • Why is the change risky/not risky? (and alternatives if risky):
  • String changes made/needed:
Attachment #9172355 - Flags: approval-mozilla-beta?
Attachment #9172354 - Flags: approval-mozilla-beta?

Comment on attachment 9172354 [details]
Bug 1661388 - Factor out the default print settings code. r=jwatt

Approved for 81.0b6.

Attachment #9172354 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9172355 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Confirming this issue as verified fixed on macOS 10.15, Ubuntu 18.04 and Windows 10x64. Verified using 82.0a1 (2020-09-09) and 81.0b8.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: