Bug 1661388 - Never show the print progress dialog if we're calling window.print() with the new UI. r=jwatt, a=RyanVM

Depends on D88397

Differential Revision: https://phabricator.services.mozilla.com/D88398